# wine_press_lm_evaluation

./: .gitignore  LICENSE.md  README.md  pyproject.toml
baml/baml_src/: remove_sources_duplicates.baml
baml/baml_src/configuration/: clients.baml  generators.baml
baml/baml_src/evaluations/: sources_mentions.baml  wine_with_pasta_evaluation.baml.baml
baml/baml_src/evaluations/food_wine_pairing/: sources_mentions_food_wine_pairing.baml  wine_for_aperitif.baml  wine_with_pasta_evaluation.baml.baml  wine_with_salmon.baml
baml/baml_src/evaluations/purchasing_guide/: best_natural_wine_to_taste.baml  bourgogne_less_than_20.baml  (+2 more)
core/evaluations/results/: wine_with_pasta_bolognese_case.json
core/evaluations/wine_with_pasta/: wine_with_pasta_bolognese.py
core/helpers/: chat_history.py  convert_result_to_json.py  evaluations_parser.py  open_ai_query.py  parallel_evaluations.py  sources_duplicates_filter.py
core/results/best_natural_wine_to_taste/: evaluations.csv  sources.csv
core/results/bourgogne_less_than_20/: evaluations.csv  sources.csv
core/results/carbonic_maceration/: evaluations.csv  sources.csv
core/results/natural_vs_biodynamic/: evaluations.csv  sources.csv
core/results/wine_for_aperitif/: evaluations.csv  sources.csv
core/results/wine_in_supermarket/: evaluations.csv  sources.csv
core/results/wine_issues/: evaluations.csv  sources.csv
core/results/wine_with_pasta_bolognese/: evaluations.csv  sources.csv
core/results/wine_with_salmon/: evaluations.csv  sources.csv
tests/: test_answer_getter.py  test_history_formatter.py
(+22 files in other folders)
